@@ -19,7 +19,6 @@ source "$APPSDIR/system/mdio/Kconfig"
 source "$APPSDIR/system/ramtron/Kconfig"
 source "$APPSDIR/system/sdcard/Kconfig"
 source "$APPSDIR/system/sudoku/Kconfig"
-source "$APPSDIR/system/sysinfo/Kconfig"
 source "$APPSDIR/system/lm75/Kconfig"
 source "$APPSDIR/system/vi/Kconfig"
 source "$APPSDIR/system/stackmonitor/Kconfig"
