@@ -1,19 +1,0 @@
-#
-# For a description of the syntax of this configuration file,
-# see the file kconfig-language.txt in the NuttX tools repository.
-#
-
-menuconfig SYSTEM_SYSINFO
-	bool "Sysinfo"
-	default n
-	---help---
-		Enable support for the NSH sysinfo command.
-
-if SYSTEM_SYSINFO
-
-config SYSTEM_SYSINFO_STACKSIZE
-	int "NSH sysinfo stack size"
-	default 1024
-
-endif
-
